# zkCannon

./: .gitignore  Cargo.toml  README.md  note
example/claim/: claim  main.go
mips-emulator/: Cargo.toml
mips-emulator/example/claim/: go.mod
mips-emulator/src/: lib.rs  main.rs  memory.rs  pre_image.rs  sinsemilla.rs  state.rs  tests.rs  witness.rs
src/: main.rs  memory.rs  page.rs  state.rs  tests.rs
zkmips-circuits/: Cargo.toml  readme.md
zkmips-circuits/src/: main.rs  mips_circuit.rs  program.rs  table.rs  util.rs
zkmips-circuits/src/circuit_gadgets/: batch_is_zero.rs  binary_number.rs  is_zero.rs  less_than.rs  mod.rs  readme.md  util.rs
zkmips-circuits/src/mips_circuit/: constraint_builder.rs  execution.rs  table.rs  util.rs
zkmips-circuits/src/mips_circuit/execution/: add.rs
zkmips-circuits/src/mips_types/: mod.rs
zkmips-circuits/src/program/: chip.rs
zkmips-circuits/src/state_circuit/: lookups.rs  mod.rs
zkmips-circuits/src/table/: opcode_table.rs  rw_table.rs
zkmips-circuits/src/util/: cell_manager.rs  cell_manager_strategy.rs
