[package]
name = "mips_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.2"
env_logger = "0.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
sha3 = "0.10.8"

[profile.dev]
overflow-checks = false
