[workspace]
members = [
    "zkmips-circuits",
    "mips-emulator",
]

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = false
rpath = false
lto = "thin"
incremental = true
