[package]
name = "mips-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
elf = "0.7.2"
env_logger = "0.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.19"
rand = "0.8.5"
sha3 = "0.10.8"
group = "0.13"
pasta_curves = "0.5"
subtle = "2.3"
ff = "0.13"
itertools = "0.11.0"
