[package]
name = "zkmips-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20", features=["test-dependencies"]}
group = "0.13"
strum = "0.25.0"
mips_emulator = {path = "../mips-emulator"}
lazy_static = "1"
elf = "0.7.2"
plotters = { version = "0.3.0", optional = true }
